<resources>
    <string name="app_name">My Sheep</string>
    <string name="attendance_date">Attendance Date</string>
    <string name="main_info">Main info</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="home_number">Home number</string>
    <string name="father_number">Father number</string>
    <string name="grandparent_no">GrandParent no.</string>
    <string name="mother_number">Mother number</string>
    <string name="extra_number_1">Extra number 1</string>
    <string name="extra_number_2">Extra number 2</string>
    <string name="confession_father">Confession father</string>
    <string name="email_address">Email address</string>
    <string name="school">School</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="street_name">Street Name</string>
    <string name="area">Area</string>
    <string name="floor">floor</string>
    <string name="apartment">Apartment</string>
    <string name="special_sign">Special Sign</string>
    <string name="other_address">Other Address</string>
    <string name="comments">Comments</string>
    <string name="do_not_put_confidential_info">Do not put confidential info</string>
    <string name="save">Save</string>
    <string name="address_n">Address: عنوان تجريبي</string>
    <string name="kidDetailedName">اسم تجريبي</string>
    <string name="call_mobile_number_0000">Call Mobile number: 0000</string>
    <string name="call_home_number_0000">Call Home number: 0000</string>
    <string name="other_numbers">Other numbers:</string>
    <string name="call_father_number_00000">Call Father number: 00000</string>
    <string name="call_mother_number_00000">Call Mother number: 00000</string>
    <string name="call_grandparent_number_00000">Call GrandParent number: 00000</string>
    <string name="call_extra_number_1_00000">Call Extra number 1: 00000</string>
    <string name="call_extra_number_2_00000">Call Extra number 2: 00000</string>
    <string name="attendance">اسم تجريبي</string>
    <string name="call">Call</string>
    <string name="no_of_visits">No. of visits:</string>
    <string name="attended_last_time">Attended last time:</string>
    <string name="no">No</string>
    <string name="user_name">User Name</string>
    <string name="first_time_login">First time login</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="new_visit">New visit</string>
    <string name="visit_date">Visit date</string>
    <string name="servants_names">Servants\' names</string>
    <string name="visit_summary">Visit Summary</string>
    <string name="saveNewVisit">Save</string>
    <string name="visit_history">Visit History</string>
</resources>
