<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/new_visit"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/visitTitle"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/visit_date"
        android:layout_below="@id/visitTitle"
        android:layout_alignParentLeft="true"
        android:inputType="date"
        android:id="@+id/visitDate"
        android:textSize="20sp"
        android:ems="10"
        android:textColor="#000000"
        android:cursorVisible="false"
        android:fitsSystemWindows="false"
        android:outlineProvider="background"
        android:textColorHint="@color/colorAccent"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/servants_names"
        android:layout_below="@id/visitDate"
        android:layout_alignParentLeft="true"
        android:inputType="textMultiLine"
        android:id="@+id/visitServants"
        android:textSize="20sp"
        android:ems="10"
        android:minLines="3"
        android:textColor="#000000"
        android:textColorHint="@color/colorAccent"
        android:layout_marginLeft="20dp"

        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/visit_summary"
        android:layout_below="@id/visitServants"
        android:layout_alignParentLeft="true"
        android:inputType="textMultiLine"
        android:id="@+id/visitSummary"
        android:textSize="20sp"
        android:ems="10"
        android:minLines="3"
        android:textColor="#000000"
        android:textColorHint="@color/colorAccent"
        android:layout_marginLeft="20dp"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveNewVisit"
        android:layout_below="@id/visitSummary"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:id="@+id/visitSaveBtn"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="15dp"
        android:theme="@style/AppTheme" />



</RelativeLayout>